TW-85969: S3 Storage: emit "Lens" events for upload and download requests
fix: modules updated for the build in IDE

fix: modules updated for the build in IDE

fix: review comments

fix: cleanup

fix: review comments

fix: review comments

fix: package name

fix: build

fix: build

fix: compilation

fix: awsCoreVersion dependency

fix: localRepo path

fix: cleanup

fix: cleanup

fix: publish events tuning

feat: two events for upload statistics

feat: TW-85969 S3 Storage: emit "Lens" events for upload and download requests

refactor: prepare repository


Merge-request: TC-MR-8624
Merged-by: Andrei Efimov <Andrei.Efimov@jetbrains.com>